manifest/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend-deployment
  labels:
    app: node-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-backend
  template:
    metadata:
      labels:
        app: node-backend
    spec:
      containers:
      - name: node-backend
        image: david8bullet/mern_workout_terraform_infra_backend
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: node-backend-service
spec:
  # mongo lehet deploy helmmel
  #type: NodePort default clusterIp   frontend loadbalacer /// ha ingress clusterip  (ingress controller---helm chart)
  # beanstalk node-hoz
  # 
  selector:
  
    app: node-backend
  ports:
    - protocol: TCP 
      port: 8090
      targetPort: 5000
      NodePort: 30100
# 30000-32767 is valid
