manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react
spec:
  selector:
    matchLabels:
      app: react
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: david8bullet/mern_workout_terraform_infra_frontend:latest
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 3000
           
---

apiVersion: v1
kind: Service
metadata:
  name: hostname-service
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 3000  # Adjust the target port as per your app's configuration
  # type: LoadBalancer  # Change the service type as per your environment (e.g., NodePort, ClusterIP)
